# Gita

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Gemini.md  MIGRATION_PLAN.md  README.md  build-production.bat  build-production.sh  dev.bat  dev.properties  dev.ps1  package.json  tasks.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AudioControls.tsx  BlockEditor.tsx  MainEditor.tsx  Sidebar.tsx
frontend/src/store/: appStore.ts
src-tauri/: Cargo.toml  gita-config.toml  tauri.conf.json
src-tauri/.sqlx/: query-2794625373b8191bf9df7c42e07b978b610e1d927d62c21d19b72e554b2d074c.json  query-428a42b4a37ec649eb087ed7cb4c55f14de409abd743b630565ad59a852f631e.json  query-735910131a738d858c2cf1d0dc2f2baa1e5ae3ed0d13e64e36277b376d94f21c.json  query-83fe28e0a46437c3eefd0f515607c29ebfa2a712a8e1660cc8f80807a1cef4ca.json  query-8a75769a4f266b0aa6309b33c30a9db56f25191f92904a5e4e409ea6f2a2481d.json  query-a042b2410c687e78c61a3e0ffc1d4a2a6c013107d4e6a890dae1f407b563f45c.json  query-fab0ba93743c9b7fb1047eb3e24347f6d880ef77097ac732a2519530a8d5769d.json
src-tauri/data/: gita.db
src-tauri/migrations/: 001_initial.sql  20240101000000_initial_sqlite.sql
src-tauri/src/: audio_engine.rs  config.rs  database.rs  database_peer.rs  database_peer_complete.rs  database_peer_jni.rs  datomic_schema.rs  errors.rs  main.rs  models.rs  tests.rs
tasks/: todo.md
